portfolio-router-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portfolio-router
  namespace: production
  labels:
    app: portfolio-router
#  annotations:
# GKE: create a static ip: gcloud compute addresses create ingress-ip --global
# GKE: use a static ip: kubernetes.io/ingress.global-static-ip-name: ingress-ip
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: portfolio
          servicePort: 8080
      - path: /portfolio/*
        backend:
          serviceName: portfolio
          servicePort: 8080
      - path: /security-rating/*
        backend:
          serviceName: security-rating
          servicePort: 8081
